--- a/styles/style.css
+++ b/styles/style.css
@@ -46,8 +46,10 @@ section {
 }
 
 header {
-    display: flex;
-    justify-content: flex-end;
+    /* display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    */
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
@@ -75,7 +77,7 @@ h2 {
 }
 
 header img {
-    height: var(--header-height);
+    /* height: var(--header-height); */
 }
 
 p {
